[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/VoiceGeneratorAudioStreamPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://ExampleScene.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "talking"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -11 ), Vector2( 0, -13 ) ]
}

[node name="ExampleScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 184.508
margin_right = 32.0
margin_bottom = 226.508
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 30.7368, 54.5263 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Control/TextureRect2"]
margin_top = -11.0
margin_right = 64.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 30.7368, 54.5263 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="PanelContainer/Control/TextureRect2/TextureRect"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/talking = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -278.0
margin_top = -140.0
margin_right = 278.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Control/VBoxContainer"]
margin_right = 556.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/Control/VBoxContainer/HBoxContainer"]
margin_right = 174.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Pitch"

[node name="PitchValueLabel" type="Label" parent="PanelContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "1"
align = 2

[node name="PitchHSlider" type="HSlider" parent="PanelContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 356.0
margin_right = 556.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
min_value = 0.4
max_value = 2.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/Control/VBoxContainer"]
margin_top = 20.0
margin_right = 556.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/Control/VBoxContainer/HBoxContainer2"]
margin_right = 174.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Pitch Difference"

[node name="PitchDifferenceValueLabel" type="Label" parent="PanelContainer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 178.0
margin_right = 352.0
margin_bottom = 14.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "1.1"
align = 2

[node name="PitchDifferenceHSlider" type="HSlider" parent="PanelContainer/Control/VBoxContainer/HBoxContainer2"]
margin_left = 356.0
margin_right = 556.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
max_value = 2.5
step = 0.01
value = 1.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/Control/VBoxContainer"]
margin_top = 40.0
margin_right = 556.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/Control/VBoxContainer/HBoxContainer3"]
margin_right = 352.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Voice"

[node name="VoiceOptionButton" type="OptionButton" parent="PanelContainer/Control/VBoxContainer/HBoxContainer3"]
margin_left = 356.0
margin_right = 556.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Control/VBoxContainer"]
margin_top = 64.0
margin_right = 556.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Control/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 549.0
margin_bottom = 31.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PhraseLineEdit" type="LineEdit" parent="PanelContainer/Control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
text = "I can read with pauses. And questions?"

[node name="PlayButton" type="Button" parent="PanelContainer/Control/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 542.0
margin_bottom = 24.0
text = "Play"

[node name="VoiceGeneratorAudioStreamPlayer" parent="." instance=ExtResource( 2 )]

[connection signal="value_changed" from="PanelContainer/Control/VBoxContainer/HBoxContainer/PitchHSlider" to="." method="_on_PitchHSlider_value_changed"]
[connection signal="value_changed" from="PanelContainer/Control/VBoxContainer/HBoxContainer2/PitchDifferenceHSlider" to="." method="_on_PitchDifferenceHSlider_value_changed"]
[connection signal="item_selected" from="PanelContainer/Control/VBoxContainer/HBoxContainer3/VoiceOptionButton" to="." method="_on_VoiceOptionButton_item_selected"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/PanelContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
